shift navbar items to avoid line-breaking on smaller screens

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -49,6 +49,20 @@ dl
   .collapsed-only
     display: block !important
 
+//move Reports to dropdown and reduce font size to avoid line-break
+.report2
+  display: none
+
+@media only screen and (max-width: 992px)
+  .navbar-default .navbar-nav > li > a
+    font-size: 15px
+
+  .report1
+    display: none !important
+
+  .report2
+    display: block !important
+
 // Hide links while printing - see http://stackoverflow.com/questions/3476393
 @media print
   a:link:after, a:visited:after
